@@ -1,9 +1,10 @@
 from slophep.Predictions.FormFactorsBToP.BToPFFBase import FormFactorBToP
 from slophep.Predictions.FormFactorsBToP.BToPFFBSZ import BSZ_BToP
+from slophep.Predictions.FormFactorsBToP.BToPFFBLPR import BLPR_BToP
 import slophep.Predictions.FormFactorsBToP.BToDFF as BToDFF
 
 __all__ = [
     "FormFactorBToP",
-    "BSZ_BToP",
+    "BSZ_BToP", "BLPR_BToP",
     "BToDFF"
 ]
